[build-system]
requires=["setuptools","wheel"]
build-backend="setuptools.build_meta"

[project]
name = "pxgrid-api"
version = "0.1.2"
description = "pxGrid API library and command line tool"
readme = "README.md"
authors = [{ name = "Viktor Bobrov", email = "vibobrov@cisco.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pxgrid"]
dependencies = [
    "requests",
    "python-dateutil",
    "websocket-client",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/vbobrov/px-api"

[project.scripts]
pxshell = "pxapi.__main__:main"